--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,9 +6,9 @@ entries:
       category: Infrastructure
     apiVersion: v2
     appVersion: v0.0.20
-    created: "2021-09-14T17:41:46.878521+02:00"
+    created: "2021-09-15T14:05:05.821689+02:00"
     description: Rancher Local Path Provisioner Storage for Kubernetes-based IMS
-    digest: fc8f756a7bdacb01430ab60c61e65cdbb68e6e249d1d4f8f4da94803f085375d
+    digest: 52ac2fcdd87c2762be3fc49cddfe519a59d37c80c5a77c372323dbe8410aa04c
     home: https://github.com/rancher/local-path-provisioner
     keywords:
     - rancher
@@ -28,4 +28,28 @@ entries:
     urls:
     - local-path-provisioner-0.1.0.tgz
     version: 0.1.0
-generated: "2021-09-14T17:41:46.877034+02:00"
+  mysql:
+  - annotations:
+      app: mysql
+      category: Infrastructure
+    apiVersion: v2
+    appVersion: "5.7"
+    created: "2021-09-15T14:05:05.82361+02:00"
+    description: MySQL cluster with ProxySQL for Kubernetes clusters
+    digest: b40dcae7abc4088b610f6fedf0bde4de3bf0c17444f683d4ac50713961c89ed3
+    keywords:
+    - mysql
+    - mysql-cluster
+    - proxysql
+    kubeVersion: '>= 1.19.0 < 1.20.0'
+    maintainers:
+    - email: behnam@ng-voice.com
+      name: Behnam Hooshiarkashani
+    - email: muneeb@ng-voice.com
+      name: Muneeb Ahmad
+    name: mysql
+    type: application
+    urls:
+    - mysql-0.1.0.tgz
+    version: 0.1.0
+generated: "2021-09-15T14:05:05.819495+02:00"
